fix mobile gaps

--- a/styles/pages/Mobile.module.css
+++ b/styles/pages/Mobile.module.css
@@ -5,7 +5,7 @@
     padding-left: 10%;
     padding-right: 10%;
     margin-top: 150px;
-    gap: 300px;
+    gap: 150px;
     z-index: 2;
     background-image: url(/images/lines.svg);
     background-size: contain;
